# iridescent

./: .gitignore  .markdownlintignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: combine.yml
examples/: colors.rs  modes.rs  rainbow.rs
src/: background.rs  color.rs  constants.rs  foreground.rs  lib.rs  rgb.rs  styled.rs  styled_string.rs
