[package]
name = "iridescent"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Terminal text styling via ANSI escape sequences."
repository = "https://github.com/robertwayne/iridescent"
categories = ["command-line-interface"]
keywords = ["ansi", "terminal"]
readme = "README.md"

[dependencies]
rand = { version = "0.8", optional = true }

[features]
default = []
random = ["rand"]
